--- a/管理系统.html
+++ b/管理系统.html
@@ -14,7 +14,7 @@
             alert("已驳回！");
         }
         function myFunction1(){
-             window.open("校园跑腿主页.html");
+             window.open("index.html");
         }
         </script>
        
