--- a/个人信息页.html
+++ b/个人信息页.html
@@ -14,7 +14,7 @@
             alert("保存成功"); 
         }
         function myFunction1(){
-             window.open("校园跑腿主页.html");
+             window.open("index.html");
         }
         </script>
        
