--- a/管理员登陆界面.html
+++ b/管理员登陆界面.html
@@ -41,8 +41,8 @@ r.style.display = 'block';
 }
 }
 function dengluyanzheng() {
-    var user1 = "966366"; 
-    var psg1 = "xyt123"; 
+    var user1 = "8181"; 
+    var psg1 = "123456"; 
     var zh1 = document.getElementById("z1").value;
     var ps1 = document.getElementById("p1").value;
     alert("正在检测"+zh1+"-------"+ps1)
