--- a/店铺登录界面.html
+++ b/店铺登录界面.html
@@ -18,7 +18,7 @@
     if(zh1==null&&ps1==null) {
         alert("格式错误");
     } 
-    else {alert("登陆成功");window.open("个人信息页.html");}
+    else {alert("登陆成功");window.open("店铺信息.html");}
     }
 function fn1(){
 var t = document.getElementById('d1');
@@ -43,13 +43,13 @@ r.style.display = 'block';
 }
 }
 function dengluyanzheng() {
-    var user1 = "966366"; 
-    var psg1 = "xyt123"; 
+    var user1 = "456123"; 
+    var psg1 = "xyt191"; 
     var zh1 = document.getElementById("z1").value;
     var ps1 = document.getElementById("p1").value;
     alert("正在检测"+zh1+"-------"+ps1)
     if(zh1==user1,ps1==psg1) {
-        alert("登陆成功！");window.open("个人信息页.html");
+        alert("登陆成功！");window.open("店铺信息.html");
     } 
     else {alert("用户名不存在或密码错误，请重新登陆或注册！");}
    
