--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
     <title>校园跑腿主页</title>
     <link rel="stylesheet" href="my2.css">
     <script>
@@ -43,8 +43,8 @@
             <!-- 右 -->
             <div class="ybox">
                 
-                <p>创新服务新领域——校园</p><br>
-                <p>委托——接单模式</p><br>
+                <p>创新服务新领域</p><br>
+                <p>委托—接单模式</p><br>
                 <a href="管理员登陆界面.html">管理员登录</a>
             </div>
             
